# tm_transport

./: LICENSE  README.md  meson.build  meson_options.txt
TMTransportDotNet/: ConnectionLocator.cs  EtcdChain.cs  HeartbeatAndAlert.cs  Hooks.cs  MultiTransportExporter.cs  MultiTransportFacility.cs  MultiTransportImporter.cs  MulticastComponent.cs  RabbitMQComponent.cs  RedisChain.cs  RedisComponent.cs  TMTransportDotNet.csproj  ZeroMQComponent.cs
build_environment_tools/: UpdateGrpcVersion.cpp  meson.build
node_lib/: TMTransport.ts  TMTransport_Chains.ts  TMTransport_Chains.ts.bak  package-lock.json  package.json  tsconfig.json
node_lib/src/: index.ts  types.ts
node_lib/src/chain/: chain.ts  chain.types.ts
node_lib/src/network/: network.ts  network.types.ts
python_lib/: TMTransport.py
src/: AlertMessage.cpp  BoostCertifyAdaptor.cpp  BoostCertifyAdaptor.hpp  ConnectionLocator.cpp  ConvertChainIDStringToGroup.cpp  HeartbeatAndAlertComponent.cpp  HeartbeatComponent.cpp  HeartbeatMessage.cpp  HeartbeatMessageToRemoteFacilityCommand.cpp  HostNameUtil.cpp  meson.build
src/grpc_interop/: GrpcConnectionLocatorUtils.cpp  GrpcInteropComponent.cpp
src/json_rest/: JsonRESTComponent.cpp
src/multicast/: InterfaceToIP.cpp  InterfaceToIP.hpp  MulticastComponent.cpp
src/nats/: NATSComponent.cpp
src/nng/: NNGComponent.cpp
src/rabbitmq/: RabbitMQComponent.cpp
src/redis/: RedisComponent.cpp
src/security/: SignatureHelper.cpp
src/shared_memory_broadcast/: SharedMemoryBroadcastComponent.cpp
src/singlecast/: SinglecastComponent.cpp
src/socket_rpc/: SocketRPCComponent.cpp
src/websocket/: WebSocketComponent.cpp
src/zeromq/: ZeroMQComponent.cpp
tm_kit/transport/: AbstractBroadcastHookFactoryComponent.hpp  AbstractHookFactoryComponent.hpp  AbstractIdentityCheckerComponent.hpp  AlertEnhancedLoggingComponent.hpp  AlertMessage.hpp  BoostUUIDComponent.hpp  ByteDataHook.hpp  ConnectionLocator.hpp  ConvertChainIDStringToGroup.hpp  CrossGuidComponent.hpp  EmptyIdentityCheckerComponent.hpp  ExitDataSource.hpp  HeartbeatAndAlertComponent.hpp  HeartbeatComponent.hpp  HeartbeatMessage.hpp  HeartbeatMessageToRemoteFacilityCommand.hpp  HostNameUtil.hpp  MultiTransportBroadcastListener.hpp  MultiTransportBroadcastListenerManagingUtils.hpp  MultiTransportBroadcastListenerManagingUtils_SynchronousRunner.hpp  MultiTransportBroadcastPublisherManagingUtils.hpp  MultiTransportFacilityWrapper.hpp  MultiTransportRemoteFacility.hpp  MultiTransportRemoteFacilityManagingUtils.hpp  MultiTransportRemoteFacilityManagingUtils_SynchronousRunner.hpp  MultiTransportSubscriber.hpp  MultiTransportTouchups.hpp  RemoteTransactionSubscriberManagingUtils.hpp  SharedChainCreator.hpp  SimpleIdentityCheckerComponent.hpp  SyntheticMultiTransportFacility.hpp  TLSConfigurationComponent.hpp  meson.build
tm_kit/transport/bcl_compat/: BclStructs.hpp  DateTime.hpp  Decimal.hpp  Duration.hpp  Guid.hpp  meson.build
tm_kit/transport/complex_key_value_store_components/: OnDemandReadonlyServer.hpp  PreloadAllReadonlyServer.hpp  SingleTableAsCollectionTransactionServer.hpp  SingleTablePerItemTransactionServer.hpp  meson.build
tm_kit/transport/db_table_importer_exporter/: DBTableExporterFactory.hpp  DBTableImporterFactory.hpp  StructFieldInfoUtils_SociHelper.hpp  meson.build
tm_kit/transport/etcd_shared_chain/: EtcdChain.hpp  EtcdSharedChain.hpp  meson.build
tm_kit/transport/grpc_interop/: GrpcClientFacility.hpp  GrpcConnectionLocatorUtils.hpp  GrpcInteropComponent.hpp  GrpcInteropComponentException.hpp  GrpcSerializationHelper.hpp  GrpcServerFacility.hpp  GrpcServiceInfo.hpp  meson.build
tm_kit/transport/json_rest/: ComplexInput.hpp  JsonRESTClientFacility.hpp  JsonRESTClientFacilityUtils.hpp  JsonRESTComponent.hpp  JsonRESTComponentException.hpp  JsonRESTFacilityWrapper.hpp  RawString.hpp  meson.build
tm_kit/transport/lock_free_in_memory_shared_chain/: LockFreeInBoostSharedMemoryChain.hpp  LockFreeInMemoryChain.hpp  LockFreeInMemorySharedChain.hpp  meson.build
tm_kit/transport/multicast/: MulticastComponent.hpp  MulticastImporterExporter.hpp  meson.build
tm_kit/transport/named_value_store_components/: EtcdHelper.hpp  EtcdLocalImporter.hpp  EtcdNamedValueStoreComponents.hpp  NamedValueStoreConsumerCombination.hpp  meson.build
tm_kit/transport/named_value_store_components/etcd_lock_helper/: LockHelper.ts
tm_kit/transport/nats/: NATSComponent.hpp  NATSImporterExporter.hpp  NATSOnOrderFacility.hpp  meson.build
tm_kit/transport/nng/: NNGComponent.hpp  NNGImporterExporter.hpp  meson.build
tm_kit/transport/rabbitmq/: RabbitMQComponent.hpp  RabbitMQImporterExporter.hpp  RabbitMQOnOrderFacility.hpp  meson.build
tm_kit/transport/redis/: RedisComponent.hpp  RedisImporterExporter.hpp  RedisOnOrderFacility.hpp  meson.build
tm_kit/transport/redis_shared_chain/: RedisChain.hpp  meson.build
tm_kit/transport/security/: SignatureAndVerifyHookFactoryComponents.hpp  SignatureBasedIdentityCheckerComponent.hpp  SignatureHelper.hpp  meson.build
tm_kit/transport/shared_memory_broadcast/: SharedMemoryBroadcastComponent.hpp  SharedMemoryBroadcastImporterExporter.hpp  meson.build
tm_kit/transport/singlecast/: SinglecastComponent.hpp  SinglecastImporterExporter.hpp  meson.build
tm_kit/transport/socket_rpc/: SocketRPCComponent.hpp  SocketRPCOnOrderFacility.hpp  meson.build
tm_kit/transport/websocket/: WebSocketClientFacility.hpp  WebSocketComponent.hpp  WebSocketComponentException.hpp  WebSocketImporterExporter.hpp  WebSocketLazyImporter.hpp  WebSocketServerFacility.hpp  meson.build
tm_kit/transport/zeromq/: ZeroMQComponent.hpp  ZeroMQImporterExporter.hpp  meson.build
