tm_transport_complex_key_value_store_components_headers = [
    'PreloadAllReadonlyServer.hpp'
    , 'OnDemandReadonlyServer.hpp'
    , 'SingleTablePerItemTransactionServer.hpp'
  ]
  
install_headers(tm_transport_complex_key_value_store_components_headers, subdir : 'tm_kit/transport/complex_key_value_store_components')