tm_transport_grpc_interop_headers = [
    'GrpcInteropComponentException.hpp',
    'GrpcInteropComponent.hpp',
    'GrpcServiceInfo.hpp',
    'GrpcConnectionLocatorUtils.hpp',
    'GrpcSerializationHelper.hpp',
    'GrpcClientFacility.hpp',
    'GrpcServerFacility.hpp'
  ]
  
install_headers(tm_transport_grpc_interop_headers, subdir : 'tm_kit/transport/grpc_interop')