tm_transport_json_rest_headers = [
    'RawString.hpp',
    'ComplexInput.hpp',
    'JsonRESTComponentException.hpp',
    'JsonRESTComponent.hpp',
    'JsonRESTFacilityWrapper.hpp',
    'JsonRESTClientFacility.hpp',
    'JsonRESTClientFacilityUtils.hpp'
  ]
  
install_headers(tm_transport_json_rest_headers, subdir : 'tm_kit/transport/json_rest')