tm_transport_websocket_headers = [
      'WebSocketComponent.hpp'
    , 'WebSocketComponentException.hpp'
    , 'WebSocketImporterExporter.hpp'
    , 'WebSocketServerFacility.hpp'
    , 'WebSocketClientFacility.hpp'
    , 'WebSocketLazyImporter.hpp'
    ]
  
install_headers(tm_transport_websocket_headers, subdir : 'tm_kit/transport/websocket')